# GameEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  ClearProjects.bat  GenerateProjects.bat  GenerateXCodeProjects.command  LaunchXCode.command  README.md  UpdateProjects.bat
config/: CMakeLists.txt  remove_all_build.bat
data/anim/: zelda-a-pose.anim  zelda-add-look-around.anim  zelda-additive.anim  zelda-face-idle.anim  zelda-funny-pose-2.anim  zelda-funny-pose-3.anim  zelda-funny-pose-4.anim  zelda-funny-poses.anim  zelda-hands-idle.anim  zelda-idle-stand-01.anim  zelda-idle-stand-relaxed.anim  zelda-jump-loop.anim  zelda-loco-idle-to-run-0.anim  zelda-loco-jump-in-place.anim  zelda-loco-jump.anim  zelda-loco-run-relaxed-tw.anim  zelda-loco-run-relaxed.anim  zelda-run-to-idle-sharp.anim  zelda-upper-hold-sword.anim  zelda-upper-wind-protect.anim  zelda-wind-01.anim
data/font/: debug-font-data-2.txt
data/mesh/: chest.mesh  rock-01.mesh  rock-02.mesh  rock-03.mesh  rock-04.mesh  rock-05.mesh  skull_block_PBR_fc.mesh  zelda-mesh.mesh  zelda-sword.mesh
data/rig/: zelda-rig.rig
projectBuilder/: commandLineParser.py  dataCollector.py  genericGenerator.py  mac.py  main.py  messages.py  platformUtils.py  project.py  solutionRunner.py  thirdPartyDataCollector.py  thirdPartyProject.py  visualStudioGenerator.py  visualStudioHelpers.py  visualStudioProjectFiltersGenerator.py  visualStudioProjectGenerator.py  visualStudioPropertiesSheetGenerator.py  visualStudioSolutionGenerator.py  xcode.py  xcodeGenerator.py  xmlSerializer.py  xmlUtils.py
scripts/: core.rkt  idle.fs  scripts.rkt  zelda.fs  zelda.txt
shaders/: basic.vert  basic_fs.frag  basic_vs.vert  basic_vs_no_skin.vert  compile.bat  compile.command  debug_vs.vert  rect_vs.vert  text_fs.frag  text_vs.vert
source/common/ccmd/: CMakeLists.txt  Target.json  cmd.h
source/common/ccmd/internal/: cmd.c  cmdImport.c  main.c
source/common/cgame/: CMakeLists.txt  Target.json  api.h  camera.h  engine.h  script.h  world.h
source/common/cgame/internal/: camera.c  engine.c  script.c  scriptNativeFunctions.c  world.c
source/common/gamework/: Target.json  api.h  gameSystem.h  public.h
source/common/gamework/internal/: gameSystem.cpp  pch.h
source/common/world/: Target.json  api.h  geometryBuilder.h  levelLayout.h  objectPalette.h  objectPaletteFormat.h
source/common/world/internal/: geometryBuilder.cpp  levelLayout.cpp  objectPalette.cpp  pch.h
source/game/duena/: CMakeLists.txt  Info.plist  Target.json  launcher.h
source/game/duena/internal/: camera.c  camera.h  cameraSystem.cpp  cameraSystem.h  debugMeshRenderSystem.cpp  debugMeshRenderSystem.h  gameActions.cpp  gameActions.h  gameSpawners.cpp  gameSpawners.h  launcher.cpp  pch.h  playerMovementSystem.cpp  playerMovementSystem.h  projectileSystem.cpp  projectileSystem.h  renderingSystem.cpp  renderingSystem.h  simple.metal  spriteSystem.cpp  spriteSystem.h  tiledTerrainSystem.cpp  tiledTerrainSystem.h  transformSystem.cpp  transformSystem.h
source/shared/animation/: Target.json  animCommands.h  animPlayer.h  animation.h  api.h  pose.h  poseStack.h  public.h  rig.h
source/shared/animation/internal/: animCommands.cpp  animPlayer.cpp  pch.h  poseStack.cpp  rig.cpp
source/shared/audio/: Target.json  api.h  audioEngine.h  public.h
source/shared/audio/internal/: audioEngine.cpp  pch.h
source/shared/canim/: CMakeLists.txt  Target.json  animClip.h  animCommands.h  animSystem.h  animation.h  api.h  character.h  enums.h  pbd.h  pose.h  poseStack.h  public.h  rig.h
source/shared/canim/internal/: animClip.c  animCommands.c  animSystem.c  animation.c  character.c  clip.c  pbd.c  pose.c  poseStack.c  (+1 more)
source/shared/ccore/: CMakeLists.txt  Target.json  api.h  assert.h  buffer.h  commands.h  debugDraw.h  fileIO.h  furAssert.h  jobs.h  memory.h  platform.h  profiler.h  public.h  serialize.h  stringHash.h  textParsing.h  types.h
source/shared/cimport/: CMakeLists.txt  Target.json  api.h  import.h  public.h
source/shared/cinput/: CMakeLists.txt  Target.json  api.h  input.h  public.h
source/shared/cinput/internal/: input.c  macHIDInput.h  macHIDInput.m  winHIDInput.c  winHIDInput.h
source/shared/cmath/: api.h  math3d.h  math3dimpl.h  mathtypes.h  public.h
source/shared/core/: Target.json  algorithms.h  api.h  arrayView.h  commandBuffer.h  furballAssert.h  iniParser.h  name.h  public.h  stringView.h  textParser.h  threads.h  timer.h  types.h  variant.h
source/shared/cphysics/: CMakeLists.txt  Target.json  api.h  physics.h  public.h
source/shared/cphysics/internal/: physics.cpp
source/shared/crend/: 3dmath.h  CMakeLists.txt  Target.json  api.h  renderer.h
source/shared/crend/internal/: 3dmath.c  image.c  image.h  psoUtils.c  psoUtils.h  pvs.c  pvs.h  renderBuffer.c  renderBuffer.h  renderUtils.c  renderUtils.h  renderer.c  stb_image.h  vulkan.h
source/shared/glfw/: Target.json
source/shared/gpu/: Target.json  api.h  blitCommandEncoder.h  buffer.h  commandBuffer.h  commandQueue.h  depthStencilState.h  device.h  drawable.h  enums.h  graphicsCommandEncoder.h  graphicsPassDescriptor.h  graphicsPipelineState.h  platformPointers.h  public.h  shader.h  shaderLibrary.h  texture.h  vertexBufferLayout.h
source/shared/input/: api.h  inputCollector.h  inputDevice.h  inputMapping.h  public.h
source/shared/jobs/: CMakeLists.txt  api.h  fcontext.h  fibers.h  public.h
source/shared/math/: Target.json  api.h  matrixOperations.h  public.h  quaternionOperations.h  scalarOperations.h  transformOperations.h  types.h  vectorOperations.h
source/shared/memory/: Target.json  api.h  buffer.h  memory.h  public.h
source/shared/profiler/: api.h  profiler.h
source/shared/renderer/: Target.json  api.h  font.h  frame.h  geometryBuilder.h  geometryUtils.h  mesh.h  potentiallyVisibleSet.h  public.h  renderer.h  sprite.h
source/shared/resources/: Target.json  absolutePath.h  api.h  public.h  resource.h  resourceLoader.h  resourcePath.h  resourceReference.h  serialization.h
source/shared/scripts/: api.h  grammar.h  lexer.h  parser.h  parserCommon.h  parsingHandler.h
(+189 files in other folders)
